--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
           <div class="container px-3">
             <a class="navbar-brand" href="#page-top">
               <div style="font-size: larger">Sebastian Hildebrand</div>
+              <div style="font-size: larger">Ph.D. student in Economics</div>
             </a>
             <button
               class="navbar-toggler"
