Add section title.

--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
         <header>
           <div class="row justify-content-between">
             <div class="col-lg-8 px-3">
-              <!-- <h3 class="text-left section_top"> Sebastian Hildebrand </h3> -->
-              <p>Test whether building from dev branch works.</p>
+              <h4 class="section">
+                Sebastian Hildebrand &vert; Ph.D. candidate in economics
+              </h4>
               <p>
                 Welcome to my website! I am a Ph.D. candidate in economics at
                 the University of Bonn, where I focus on macroeconomics and
