Reorder content in intro for mobile.

--- a/index.html
+++ b/index.html
@@ -95,9 +95,30 @@
         <header>
           <div class="row justify-content-between">
             <div class="col-lg-8 px-3">
-              <h4 class="section">
-                Sebastian Hildebrand &vert; Ph.D. candidate in economics
-              </h4>
+              <h4 class="section">Sebastian Hildebrand</h4>
+              <p>Ph.D. candidate in economics</p>
+            </div>
+
+            <style>
+              img.rounded {
+                border-radius: 10%; /* makes the corners round */
+                max-width: 100%; /* limits the width of the image */
+                max-height: 31ex; /* limits the height of the image */
+                object-fit: scale-down; /* ensures the image is not stretched */
+              }
+            </style>
+
+            <div
+              class="col-lg-4 d-flex justify-content-center justify-content-lg-end"
+            >
+              <img
+                src="images/photo.jpeg"
+                alt="Sebastian Hildebrand"
+                class="rounded"
+              />
+            </div>
+
+            <div class="col-lg-8 px-3">
               <p>
                 Welcome to my website! I am a Ph.D. candidate in economics at
                 the University of Bonn, where I focus on macroeconomics and
@@ -123,25 +144,6 @@
                   >sebastian.hildebrand@uni-bonn.de</a
                 >
               </p>
-            </div>
-
-            <style>
-              img.rounded {
-                border-radius: 10%; /* makes the corners round */
-                max-width: 100%; /* limits the width of the image */
-                max-height: 31ex; /* limits the height of the image */
-                object-fit: scale-down; /* ensures the image is not stretched */
-              }
-            </style>
-
-            <div
-              class="col-lg-4 d-flex justify-content-center justify-content-lg-end"
-            >
-              <img
-                src="images/photo.jpeg"
-                alt="Sebastian Hildebrand"
-                class="rounded"
-              />
             </div>
           </div>
         </header>
