--- a/index.html
+++ b/index.html
@@ -95,9 +95,8 @@
         <header>
           <div class="row justify-content-between">
             <div class="col-lg-8 px-3">
-              <h4 class="section">
-                Sebastian Hildebrand &vert; Ph.D. candidate in economics
-              </h4>
+              <h4 class="section">Sebastian Hildebrand</h4>
+              <p>Ph.D. candidate in economics</p>
               <p>
                 Welcome to my website! I am a Ph.D. candidate in economics at
                 the University of Bonn, where I focus on macroeconomics and
