Another shot at reorganising the ordering.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,12 @@
           <div class="row justify-content-between">
             <div class="col-lg-8 px-3">
               <h4 class="section">Sebastian Hildebrand</h4>
-              <p>Ph.D. candidate in economics</p>
+              <p>Ph.D. candidate in Economics</p>
+            </div>
+          </div>
+
+          <div class="row justify-content-between">
+            <div class="col-lg-8 px-3">
               <p>
                 Welcome to my website! I am a Ph.D. candidate in economics at
                 the University of Bonn, where I focus on macroeconomics and
