--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           </div>
 
           <div class="row justify-content-between">
-            <div class="col-lg-8 px-3">
+            <div class="col-lg-8 px-3 order-2 order-lg-1">
               <p>
                 Welcome to my website! I am a Ph.D. candidate in economics at
                 the University of Bonn, where I focus on macroeconomics and
@@ -139,7 +139,7 @@
             </style>
 
             <div
-              class="col-lg-4 d-flex justify-content-center justify-content-lg-end"
+              class="col-lg-4 d-flex justify-content-center justify-content-lg-end order-1 order-lg-2"
             >
               <img
                 src="images/photo.jpeg"
