More space below picture.

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
                 max-width: 100%; /* limits the width of the image */
                 max-height: 31ex; /* limits the height of the image */
                 object-fit: scale-down; /* ensures the image is not stretched */
+                margin-bottom: 10px; /* add space below the picture */
               }
             </style>
 
