--- a/index.html
+++ b/index.html
@@ -95,7 +95,13 @@
         <header>
           <div class="row justify-content-between">
             <div class="col-lg-8 px-3">
-              <!-- <h3 class="text-left section_top"> Sebastian Hildebrand </h3> -->
+              <h4 class="section">Sebastian Hildebrand</h4>
+              <p>Ph.D. candidate in Economics</p>
+            </div>
+          </div>
+
+          <div class="row justify-content-between">
+            <div class="col-lg-8 px-3 order-2 order-lg-1">
               <p>
                 Welcome to my website! I am a Ph.D. candidate in economics at
                 the University of Bonn, where I focus on macroeconomics and
@@ -129,11 +135,12 @@
                 max-width: 100%; /* limits the width of the image */
                 max-height: 31ex; /* limits the height of the image */
                 object-fit: scale-down; /* ensures the image is not stretched */
+                margin-bottom: 10px; /* add space below the picture */
               }
             </style>
 
             <div
-              class="col-lg-4 d-flex justify-content-center justify-content-lg-end"
+              class="col-lg-4 d-flex justify-content-center justify-content-lg-end order-1 order-lg-2"
             >
               <img
                 src="images/photo.jpeg"
@@ -289,7 +296,7 @@
                   rest-of-the-world block. Relative to the original version of
                   model, ECB-Global 2.0 features dominant-currency pricing,
                   tariffs and trade diversion. We illustrate the usefulness of
-                  ECB- Global exploring scenarios motivated by recent trade
+                  ECB-Global exploring scenarios motivated by recent trade
                   tensions between China and the US.
                 </p>
               </div>
@@ -301,7 +308,7 @@
   title        = {ECB-Global 2.0: a global macroeconomic model with dominant-currency pricing, tariffs and trade diversion},
   type         = {ECB Working Paper},
   number       = {2520},
-  abstract     = {In a highly interlinked global economy a key question is how foreign shocks transmit to the domestic economy, how domestic shocks affect the rest of the world, and how policy actions mitigate or amplify spillovers. For policy analysis in such a context global multi-country macroeconomic models that allow a structural interpretation are needed. In this paper we present a revised version of ECB-Global, the European Central Bank’s global macroeconomic model. ECB-Global 2.0 is a semi-structural, global multi-country model with rich channels of international shock propagation through trade, oil prices and global financial markets for the euro area, the US, Japan, the UK, China, oil-exporting economies, Emerging Asia, and a rest-of-the-world block. Relative to the original version of model, ECB-Global 2.0 features dominant-currency pricing, tariffs and trade diversion. We illustrate the usefulness of ECB- Global exploring scenarios motivated by recent trade tensions between China and the US.},
+  abstract     = {In a highly interlinked global economy a key question is how foreign shocks transmit to the domestic economy, how domestic shocks affect the rest of the world, and how policy actions mitigate or amplify spillovers. For policy analysis in such a context global multi-country macroeconomic models that allow a structural interpretation are needed. In this paper we present a revised version of ECB-Global, the European Central Bank’s global macroeconomic model. ECB-Global 2.0 is a semi-structural, global multi-country model with rich channels of international shock propagation through trade, oil prices and global financial markets for the euro area, the US, Japan, the UK, China, oil-exporting economies, Emerging Asia, and a rest-of-the-world block. Relative to the original version of model, ECB-Global 2.0 features dominant-currency pricing, tariffs and trade diversion. We illustrate the usefulness of ECB-Global exploring scenarios motivated by recent trade tensions between China and the US.},
   keywords     = {macro-modelling, multi-country models, spillovers},
 }
               </pre
