--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div id="content">
       <div class="container">
         <nav
-          class="navbar navbar-expand-lg navbar-light bg-light fixed-top"
+          class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top"
           id="mainNav"
         >
           <div class="container px-3">
