--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
   <body id="page-top">
     <div id="content">
       <div class="container">
+        <!-- Here, the navbar is configured, incl. the color-scheme. -->
         <nav
           class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top"
           id="mainNav"
