Add bib file download.

--- a/index.html
+++ b/index.html
@@ -207,6 +207,9 @@
                 >
                   citation
                 </a>
+                <a href="/papers/GKN_ESPS.bib" role="button" target="_blank">
+                  <span class="fa fa-file-code-o"></span>
+                </a>
               </p>
               <div class="px-4 collapse card info" id="abstract-GHK_ESPS">
                 <p class="text-justify">
@@ -278,6 +281,9 @@
                   aria-controls="collapse-ImpEmp"
                 >
                   citation
+                </a>
+                <a href="/papers/ECB-G.bib" role="button" target="_blank">
+                  <span class="fa fa-file-code-o"></span>
                 </a>
               </p>
               <div class="px-4 collapse card info" id="abstract-ECB-G">
