--- a/index.html
+++ b/index.html
@@ -518,6 +518,20 @@
                   <td></td>
                   <td>Kaiserplatz 7-9, 53113 Bonn, 4th floor</td>
                 </tr>
+                <tr>
+                  <td>GitHub:</td>
+                  <td></td>
+                  <td>
+                    <a
+                      href="https://github.com/hildebrandecon/"
+                      class="n_link"
+                      role="button"
+                      target="_blank"
+                    >
+                      <span class="fa fa-github"></span>
+                    </a>
+                  </td>
+                </tr>
               </table>
             </div>
           </div>
