Try two column contact details.

--- a/index.html
+++ b/index.html
@@ -472,7 +472,11 @@
           <div class="row">
             <div class="col-md">
               <h4 class="section">Contact</h4>
+            </div>
+          </div>
 
+          <div class="row justify-content-between">
+            <div class="col-lg-8 px-3 order-2 order-lg-1">
               <table>
                 <tr>
                   <td>Email:</td>
@@ -518,21 +522,20 @@
                   <td></td>
                   <td>Kaiserplatz 7-9, 53113 Bonn, 4th floor</td>
                 </tr>
-                <tr>
-                  <td>GitHub:</td>
-                  <td></td>
-                  <td>
-                    <a
-                      href="https://github.com/hildebrandecon/"
-                      class="n_link"
-                      role="button"
-                      target="_blank"
-                    >
-                      <span class="fa fa-github"></span>
-                    </a>
-                  </td>
-                </tr>
               </table>
+            </div>
+
+            <div
+              class="col-lg-4 d-flex justify-content-center justify-content-lg-end order-1 order-lg-2"
+            >
+              <a
+                href="https://github.com/hildebrandecon/"
+                class="n_link"
+                role="button"
+                target="_blank"
+              >
+                <span class="fa fa-github"></span>
+              </a>
             </div>
           </div>
         </section>
