Increase size of logo.

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                 role="button"
                 target="_blank"
               >
-                <span class="fa fa-github"></span>
+                <span class="fa fa-github" style="font-size: 48px"></span>
               </a>
             </div>
           </div>
