Add twitter and linkedin

--- a/index.html
+++ b/index.html
@@ -536,6 +536,28 @@
               >
                 <span class="fa fa-github" style="font-size: 48px"></span>
               </a>
+              <a
+                href="https://twitter.com/hildebrandecon/"
+                class="n_link"
+                role="button"
+                target="_blank"
+              >
+                <span
+                  class="fa-brands fa-twitter"
+                  style="font-size: 48px"
+                ></span>
+              </a>
+              <a
+                href="https://www.linkedin.com/in/hildebrandecon/"
+                class="n_link"
+                role="button"
+                target="_blank"
+              >
+                <span
+                  class="fa-brands fa-linkedin"
+                  style="font-size: 48px"
+                ></span>
+              </a>
             </div>
           </div>
         </section>
