--- a/index.html
+++ b/index.html
@@ -536,6 +536,7 @@
               >
                 <span class="fa fa-github" style="font-size: 48px"></span>
               </a>
+              <br />
               <a
                 href="https://twitter.com/hildebrandecon/"
                 class="n_link"
@@ -547,6 +548,7 @@
                   style="font-size: 48px"
                 ></span>
               </a>
+              <br />
               <a
                 href="https://www.linkedin.com/in/hildebrandecon/"
                 class="n_link"
@@ -555,6 +557,18 @@
               >
                 <span
                   class="fa-brands fa-linkedin"
+                  style="font-size: 48px"
+                ></span>
+              </a>
+              <br />
+              <a
+                href="mailto:sebastian.hildebrand@uni-bonn.de"
+                class="n_link"
+                role="button"
+                target="_blank"
+              >
+                <span
+                  class="fa-solid fa-envelope"
                   style="font-size: 48px"
                 ></span>
               </a>
