Try fixing issue with logos

--- a/index.html
+++ b/index.html
@@ -536,41 +536,29 @@
               >
                 <span class="fa fa-github" style="font-size: 48px"></span>
               </a>
-              <br />
               <a
                 href="https://twitter.com/hildebrandecon/"
                 class="n_link"
                 role="button"
                 target="_blank"
               >
-                <span
-                  class="fa-brands fa-twitter"
-                  style="font-size: 48px"
-                ></span>
+                <span class="fa fa-twitter" style="font-size: 48px"></span>
               </a>
-              <br />
               <a
                 href="https://www.linkedin.com/in/hildebrandecon/"
                 class="n_link"
                 role="button"
                 target="_blank"
               >
-                <span
-                  class="fa-brands fa-linkedin"
-                  style="font-size: 48px"
-                ></span>
+                <span class="fa fa-linkedin" style="font-size: 48px"></span>
               </a>
-              <br />
               <a
                 href="mailto:sebastian.hildebrand@uni-bonn.de"
                 class="n_link"
                 role="button"
                 target="_blank"
               >
-                <span
-                  class="fa-solid fa-envelope"
-                  style="font-size: 48px"
-                ></span>
+                <span class="fa fa-envelope" style="font-size: 48px"></span>
               </a>
             </div>
           </div>
