Clean up new contact layout

--- a/index.html
+++ b/index.html
@@ -120,13 +120,44 @@
               </p>
               <p>
                 If you want to work with me or simply have a chat, feel free to
-                contact me via email.
+                contact me via email or social media.
               </p>
-              <p>
-                Email:
-                <a href="mailto:sebastian.hildebrand@uni-bonn.de"
-                  >sebastian.hildebrand@uni-bonn.de</a
+              <p align="center">
+                <a
+                  href="mailto:sebastian.hildebrand@uni-bonn.de"
+                  class="n_link"
+                  role="button"
+                  target="_blank"
                 >
+                  <span class="fa fa-envelope" style="font-size: 48px"></span>
+                </a>
+                &nbsp;
+                <a
+                  href="https://github.com/hildebrandecon/"
+                  class="n_link"
+                  role="button"
+                  target="_blank"
+                >
+                  <span class="fa fa-github" style="font-size: 48px"></span>
+                </a>
+                &nbsp;
+                <a
+                  href="https://twitter.com/hildebrandecon/"
+                  class="n_link"
+                  role="button"
+                  target="_blank"
+                >
+                  <span class="fa fa-twitter" style="font-size: 48px"></span>
+                </a>
+                &nbsp;
+                <a
+                  href="https://www.linkedin.com/in/hildebrandecon/"
+                  class="n_link"
+                  role="button"
+                  target="_blank"
+                >
+                  <span class="fa fa-linkedin" style="font-size: 48px"></span>
+                </a>
               </p>
             </div>
 
@@ -471,12 +502,8 @@
 
           <div class="row">
             <div class="col-md">
-              <h4 class="section">Contact</h4>
-            </div>
-          </div>
+              <h4 class="section">Further contact details</h4>
 
-          <div class="row justify-content-between">
-            <div class="col-lg-8 px-3 order-2 order-lg-1">
               <table>
                 <tr>
                   <td>Email:</td>
@@ -523,43 +550,6 @@
                   <td>Kaiserplatz 7-9, 53113 Bonn, 4th floor</td>
                 </tr>
               </table>
-            </div>
-
-            <div
-              class="col-lg-4 d-flex justify-content-center justify-content-lg-end order-1 order-lg-2"
-            >
-              <a
-                href="https://github.com/hildebrandecon/"
-                class="n_link"
-                role="button"
-                target="_blank"
-              >
-                <span class="fa fa-github" style="font-size: 48px"></span>
-              </a>
-              <a
-                href="https://twitter.com/hildebrandecon/"
-                class="n_link"
-                role="button"
-                target="_blank"
-              >
-                <span class="fa fa-twitter" style="font-size: 48px"></span>
-              </a>
-              <a
-                href="https://www.linkedin.com/in/hildebrandecon/"
-                class="n_link"
-                role="button"
-                target="_blank"
-              >
-                <span class="fa fa-linkedin" style="font-size: 48px"></span>
-              </a>
-              <a
-                href="mailto:sebastian.hildebrand@uni-bonn.de"
-                class="n_link"
-                role="button"
-                target="_blank"
-              >
-                <span class="fa fa-envelope" style="font-size: 48px"></span>
-              </a>
             </div>
           </div>
         </section>
