Align in table.

--- a/index.html
+++ b/index.html
@@ -404,17 +404,17 @@
 
               <table>
                 <tr>
-                  <td>2020 - present</td>
+                  <td style="vertical-align: top">2020 - present</td>
                   <td style="padding-right: 10px"></td>
                   <td>Ph.D. in Economics, University of Bonn</td>
                 </tr>
                 <tr>
-                  <td>2020 - 2022</td>
+                  <td style="vertical-align: top">2020 - 2022</td>
                   <td></td>
                   <td>M.Sc. in Economic Research, University of Bonn</td>
                 </tr>
                 <tr>
-                  <td>2017 - 2020</td>
+                  <td style="vertical-align: top">2017 - 2020</td>
                   <td></td>
                   <td>
                     M.Sc. in Money and Finance, University of Frankfurt & LUISS
@@ -422,7 +422,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>2013 - 2017</td>
+                  <td style="vertical-align: top">2013 - 2017</td>
                   <td></td>
                   <td>
                     B.A. in Economics and Social Sciences, University of Erfurt
@@ -437,7 +437,7 @@
 
               <table>
                 <tr>
-                  <td>2021 - present</td>
+                  <td style="vertical-align: top">2021 - present</td>
                   <td style="padding-right: 10px"></td>
                   <td>
                     Research assistant for Prof. Bayer and Prof. Kuhn,
@@ -445,7 +445,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>2019 - 2020</td>
+                  <td style="vertical-align: top">2019 - 2020</td>
                   <td></td>
                   <td>
                     Traineeship in DG International & European Relations,
@@ -453,7 +453,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>2019</td>
+                  <td style="vertical-align: top">2019</td>
                   <td></td>
                   <td>
                     Research Internship in DG Economics, Deutsche Bundesbank
@@ -467,7 +467,7 @@
 
               <table>
                 <tr>
-                  <td>2022 - present</td>
+                  <td style="vertical-align: top">2022 - present</td>
                   <td style="padding-right: 10px"></td>
                   <td>
                     Ph.D. Scholarship, German Research Foundation (through
@@ -476,7 +476,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>2020 - 2022</td>
+                  <td style="vertical-align: top">2020 - 2022</td>
                   <td></td>
                   <td>
                     Ph.D. Scholarship, German Research Foundation (through Bonn
@@ -484,7 +484,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>2016 - 2022</td>
+                  <td style="vertical-align: top">2016 - 2022</td>
                   <td></td>
                   <td>
                     Scholarship by the German Academic Scholarship Foundation
@@ -506,7 +506,7 @@
 
               <table>
                 <tr>
-                  <td>Email:</td>
+                  <td style="vertical-align: top">Email:</td>
                   <td style="padding-right: 10px"></td>
                   <td>
                     <a href="mailto:sebastian.hildebrand@uni-bonn.de"
@@ -515,7 +515,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>Address:</td>
+                  <td style="vertical-align: top">Address:</td>
                   <td></td>
                   <td>Rheinische Friedrich Wilhelms Universität Bonn</td>
                 </tr>
@@ -540,12 +540,12 @@
                   <td>53113 Bonn, Germany</td>
                 </tr>
                 <tr>
-                  <td>Office phone:</td>
+                  <td style="vertical-align: top">Office phone:</td>
                   <td></td>
                   <td>+49 228 73-62193</td>
                 </tr>
                 <tr>
-                  <td>Office location:</td>
+                  <td style="vertical-align: top">Office location:</td>
                   <td></td>
                   <td>Kaiserplatz 7-9, 53113 Bonn, 4th floor</td>
                 </tr>
