Further minor improvments. (#3)
* Add bib file download.

* Add GitHub link

* Try two column contact details.

* Increase size of logo.

* Add twitter and linkedin

* add mail

* Try fixing issue with logos

* Clean up new contact layout

* Align in table.

--- a/index.html
+++ b/index.html
@@ -120,13 +120,44 @@
               </p>
               <p>
                 If you want to work with me or simply have a chat, feel free to
-                contact me via email.
+                contact me via email or social media.
               </p>
-              <p>
-                Email:
-                <a href="mailto:sebastian.hildebrand@uni-bonn.de"
-                  >sebastian.hildebrand@uni-bonn.de</a
+              <p align="center">
+                <a
+                  href="mailto:sebastian.hildebrand@uni-bonn.de"
+                  class="n_link"
+                  role="button"
+                  target="_blank"
                 >
+                  <span class="fa fa-envelope" style="font-size: 48px"></span>
+                </a>
+                &nbsp;
+                <a
+                  href="https://github.com/hildebrandecon/"
+                  class="n_link"
+                  role="button"
+                  target="_blank"
+                >
+                  <span class="fa fa-github" style="font-size: 48px"></span>
+                </a>
+                &nbsp;
+                <a
+                  href="https://twitter.com/hildebrandecon/"
+                  class="n_link"
+                  role="button"
+                  target="_blank"
+                >
+                  <span class="fa fa-twitter" style="font-size: 48px"></span>
+                </a>
+                &nbsp;
+                <a
+                  href="https://www.linkedin.com/in/hildebrandecon/"
+                  class="n_link"
+                  role="button"
+                  target="_blank"
+                >
+                  <span class="fa fa-linkedin" style="font-size: 48px"></span>
+                </a>
               </p>
             </div>
 
@@ -207,6 +238,9 @@
                 >
                   citation
                 </a>
+                <a href="/papers/GKN_ESPS.bib" role="button" target="_blank">
+                  <span class="fa fa-file-code-o"></span>
+                </a>
               </p>
               <div class="px-4 collapse card info" id="abstract-GHK_ESPS">
                 <p class="text-justify">
@@ -278,6 +312,9 @@
                   aria-controls="collapse-ImpEmp"
                 >
                   citation
+                </a>
+                <a href="/papers/ECB-G.bib" role="button" target="_blank">
+                  <span class="fa fa-file-code-o"></span>
                 </a>
               </p>
               <div class="px-4 collapse card info" id="abstract-ECB-G">
@@ -367,17 +404,17 @@
 
               <table>
                 <tr>
-                  <td>2020 - present</td>
+                  <td style="vertical-align: top">2020 - present</td>
                   <td style="padding-right: 10px"></td>
                   <td>Ph.D. in Economics, University of Bonn</td>
                 </tr>
                 <tr>
-                  <td>2020 - 2022</td>
+                  <td style="vertical-align: top">2020 - 2022</td>
                   <td></td>
                   <td>M.Sc. in Economic Research, University of Bonn</td>
                 </tr>
                 <tr>
-                  <td>2017 - 2020</td>
+                  <td style="vertical-align: top">2017 - 2020</td>
                   <td></td>
                   <td>
                     M.Sc. in Money and Finance, University of Frankfurt & LUISS
@@ -385,7 +422,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>2013 - 2017</td>
+                  <td style="vertical-align: top">2013 - 2017</td>
                   <td></td>
                   <td>
                     B.A. in Economics and Social Sciences, University of Erfurt
@@ -400,7 +437,7 @@
 
               <table>
                 <tr>
-                  <td>2021 - present</td>
+                  <td style="vertical-align: top">2021 - present</td>
                   <td style="padding-right: 10px"></td>
                   <td>
                     Research assistant for Prof. Bayer and Prof. Kuhn,
@@ -408,7 +445,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>2019 - 2020</td>
+                  <td style="vertical-align: top">2019 - 2020</td>
                   <td></td>
                   <td>
                     Traineeship in DG International & European Relations,
@@ -416,7 +453,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>2019</td>
+                  <td style="vertical-align: top">2019</td>
                   <td></td>
                   <td>
                     Research Internship in DG Economics, Deutsche Bundesbank
@@ -430,7 +467,7 @@
 
               <table>
                 <tr>
-                  <td>2022 - present</td>
+                  <td style="vertical-align: top">2022 - present</td>
                   <td style="padding-right: 10px"></td>
                   <td>
                     Ph.D. Scholarship, German Research Foundation (through
@@ -439,7 +476,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>2020 - 2022</td>
+                  <td style="vertical-align: top">2020 - 2022</td>
                   <td></td>
                   <td>
                     Ph.D. Scholarship, German Research Foundation (through Bonn
@@ -447,7 +484,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>2016 - 2022</td>
+                  <td style="vertical-align: top">2016 - 2022</td>
                   <td></td>
                   <td>
                     Scholarship by the German Academic Scholarship Foundation
@@ -465,11 +502,11 @@
 
           <div class="row">
             <div class="col-md">
-              <h4 class="section">Contact</h4>
+              <h4 class="section">Further contact details</h4>
 
               <table>
                 <tr>
-                  <td>Email:</td>
+                  <td style="vertical-align: top">Email:</td>
                   <td style="padding-right: 10px"></td>
                   <td>
                     <a href="mailto:sebastian.hildebrand@uni-bonn.de"
@@ -478,7 +515,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>Address:</td>
+                  <td style="vertical-align: top">Address:</td>
                   <td></td>
                   <td>Rheinische Friedrich Wilhelms Universität Bonn</td>
                 </tr>
@@ -503,12 +540,12 @@
                   <td>53113 Bonn, Germany</td>
                 </tr>
                 <tr>
-                  <td>Office phone:</td>
+                  <td style="vertical-align: top">Office phone:</td>
                   <td></td>
                   <td>+49 228 73-62193</td>
                 </tr>
                 <tr>
-                  <td>Office location:</td>
+                  <td style="vertical-align: top">Office location:</td>
                   <td></td>
                   <td>Kaiserplatz 7-9, 53113 Bonn, 4th floor</td>
                 </tr>
