Start working on other activities section.

--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
                   <a class="nav-link" href="#Progress">Work in Progress</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" href="#Other">Other Activities</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="#Resume">Resume</a>
                 </li>
                 <li class="nav-item">
@@ -380,6 +383,19 @@
           </div>
         </section>
 
+        <!-- SECTION OTHER ACTIVITIES -->
+
+        <section id="Other">
+          <hr class="my-3" />
+
+          <div class="row">
+            <div class="col-md">
+              <h4 class="section">Other activities</h4>
+              <p>content to be added</p>
+            </div>
+          </div>
+        </section>
+
         <!-- SECTION RESUME -->
 
         <section id="Resume">
@@ -560,8 +576,8 @@
       <footer class="py-3 bg-dark">
         <div class="container px-4">
           <p class="m-0 text-center text-white">
-            Sebastian Hildebrand - University of Bonn | Last updated: December
-            2022.
+            Sebastian Hildebrand - University of Bonn | Last updated: January
+            2023.
           </p>
         </div>
       </footer>
