Add conference report.

--- a/index.html
+++ b/index.html
@@ -391,7 +391,92 @@
           <div class="row">
             <div class="col-md">
               <h4 class="section">Other activities</h4>
-              <p>content to be added</p>
+              <p>
+                In 2022, I have assisted
+                <a
+                  href="https://keithkuester.eu"
+                  class="n_link"
+                  role="button"
+                  target="_blank"
+                  >Keith Kuester</a
+                >
+                in organizing the 53rd
+                <a
+                  href="https://konstanzseminar.org"
+                  class="n_link"
+                  role="button"
+                  target="_blank"
+                  >Konstanz Seminar</a
+                >
+                on Monetary Theory and Policy. I also co-authored a conference
+                report, feel free to have a look below. I will also assist in
+                the organization of the conference again in 2023.
+              </p>
+              <p class="p_title_p">
+                <b>
+                  53rd Konstanz Seminar on Monetary Theory and Policy 2022
+                </b>
+                | with Gero Stiepelmann
+              </p>
+              <p class="p_abstract_p">
+                <a
+                  class="collapse-show showAbstract"
+                  data-toggle="collapse"
+                  href="#abstract-Konstanz2022"
+                  role="button"
+                  aria-expanded="false"
+                  aria-controls="collapse-ImpEmp"
+                >
+                  abstract
+                </a>
+                |
+                <a
+                  href="/papers/Konstanz2022.pdf"
+                  role="button"
+                  target="_blank"
+                >
+                  published version <span class="fa fa-file-pdf-o"></span>
+                </a>
+                |
+                <a
+                  class="collapse-show showAbstract"
+                  data-toggle="collapse"
+                  href="#bib-Konstanz2022"
+                  role="button"
+                  aria-expanded="false"
+                  aria-controls="collapse-ImpEmp"
+                >
+                  citation
+                </a>
+                <a
+                  href="/papers/Konstanz2022.bib"
+                  role="button"
+                  target="_blank"
+                >
+                  <span class="fa fa-file-code-o"></span>
+                </a>
+              </p>
+              <div class="px-4 collapse card info" id="abstract-Konstanz2022">
+                <p class="text-justify">
+                  In this report, we summarize the contributions to the 53rd
+                  Konstanz Seminar on Monetary Theory and Policy 2022
+                </p>
+              </div>
+              <div class="px-4 collapse card info" id="bib-Konstanz2022">
+                <pre>
+@Article{Hildebrand2022_CCM,
+  author       = {Hildebrand, Sebastian and Stiepelmann, Gero},
+  date         = {2022},
+  journaltitle = {Credit and Capital Markets – Kredit und Kapital},
+  title        = {53rd Konstanz Seminar on Monetary Theory and Policy 2022},
+  doi          = {10.3790/ccm.55.3.419},
+  number       = {3},
+  pages        = {419--426},
+  volume       = {55},
+}
+               </pre
+                >
+              </div>
             </div>
           </div>
         </section>
