--- a/index.html
+++ b/index.html
@@ -477,6 +477,11 @@
                </pre
                 >
               </div>
+              <p>
+                I also co-organize the 1st Bonn-Frankfurt-Mannheim PhD Workshop
+                that will take place May 5-6, 2023 in Frankfurt. More details
+                will follow, stay tuned!
+              </p>
             </div>
           </div>
         </section>
