Try adding google scholar

--- a/index.html
+++ b/index.html
@@ -161,6 +161,15 @@
                 >
                   <span class="fa fa-linkedin" style="font-size: 48px"></span>
                 </a>
+                &nbsp;
+                <a
+                  href="https://scholar.google.com/citations?user=_g72WecAAAAJ&hl=en&oi=ao"
+                  class="n_link"
+                  role="button"
+                  target="_blank"
+                >
+                  <span class="fa fa-google" style="font-size: 48px"></span>
+                </a>
               </p>
             </div>
 
