Add reading group.

--- a/index.html
+++ b/index.html
@@ -491,6 +491,12 @@
                 that will take place May 5-6, 2023 in Frankfurt. More details
                 will follow, stay tuned!
               </p>
+              <p>
+                I have repeatedly organized the Bonn macro reading group for PhD
+                students (so far, in summer 2021, winter 2021, summer 2022, and
+                winter 2022). If you are interested in the line-up, feel free to
+                drop me an email.
+              </p>
             </div>
           </div>
         </section>
