--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
             <div class="col-md">
               <h4 class="section">Other activities</h4>
               <p>
-                In 2022, I have assisted
+                I had the opportunity to assist
                 <a
                   href="https://keithkuester.eu"
                   class="n_link"
@@ -409,17 +409,19 @@
                   target="_blank"
                   >Keith Kuester</a
                 >
-                in organizing the 53rd
+                in organizing the 53rd Konstanz Seminar on Monetary Theory and
+                Policy in 2022. My responsibilities included co-authoring the
+                conference report, which you can find below. I am also looking
+                forward to assisting in the organization of the conference again
+                in 2023. For more information about the conference, please visit
+                the
                 <a
                   href="https://konstanzseminar.org"
                   class="n_link"
                   role="button"
                   target="_blank"
-                  >Konstanz Seminar</a
-                >
-                on Monetary Theory and Policy. I also co-authored a conference
-                report, feel free to have a look below. I will also assist in
-                the organization of the conference again in 2023.
+                  >conference website</a
+                >.
               </p>
               <p class="p_title_p">
                 <b>
@@ -487,15 +489,17 @@
                 >
               </div>
               <p>
-                I also co-organize the 1st Bonn-Frankfurt-Mannheim PhD Workshop
-                that will take place May 5-6, 2023 in Frankfurt. More details
-                will follow, stay tuned!
+                In addition, I will be co-organizing the 1st
+                Bonn-Frankfurt-Mannheim PhD Workshop, which will be held on May
+                5-6, 2023 in Frankfurt. Stay tuned for more details about the
+                event.
               </p>
               <p>
-                I have repeatedly organized the Bonn macro reading group for PhD
-                students (so far, in summer 2021, winter 2021, summer 2022, and
-                winter 2022). If you are interested in the line-up, feel free to
-                drop me an email.
+                I have organized the Bonn macro reading group for PhD students
+                on a regular basis, including in summer 2021, winter 2021,
+                summer 2022, and winter 2022. If you are interested in the
+                line-up, please do not hesitate to send me an email for more
+                information.
               </p>
             </div>
           </div>
